# imap-filter

./: README.md  imap-filter.py  imap-filter.yml  pyproject.toml
imap_filter/: address_filter.py  imap_filter.py  main.py  message.py  message_filter.py
tests/: test_imap_filter.py
